<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:onClick="ptsGagne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#6f6565"
        android:onClick="jeu"
        android:text="@string/jeu"
        android:textColor="#FFFFFF"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/batterie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#6f6565"
        android:onClick="statBatterie"
        android:text="@string/batterie"
        android:textColor="#FFFFFF"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/quitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_x="150dp"
        android:layout_y="288dp"
        android:onClick="onExit"
        android:text="@string/quitter"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="61dp"
        tools:ignore="MissingConstraints" />

</LinearLayout>