<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Batterie">


    <TextView
        android:id="@+id/mainBatterie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainBatterie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/chargeBatterie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/batterieCharge" />


    <TextView
        android:id="@+id/moyenCharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moyenDeCharge" />

    <Button
        android:id="@+id/courbe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="courbeBatterie"
        android:text="Affichage de la courbe des stats"
        android:textColor="#FFFFFF" />
</LinearLayout>